--- a/roles/zabbix-server/templates/etc/zabbix/zabbix_server.conf.j2
+++ b/roles/zabbix-server/templates/etc/zabbix/zabbix_server.conf.j2
@@ -284,7 +284,7 @@ StartVMwareCollectors=3
 # Default:
 # SNMPTrapperFile=/tmp/zabbix_traps.tmp
 
-SNMPTrapperFile=/var/log/snmptrap/snmptrap.log
+# SNMPTrapperFile=/var/log/snmptrap/snmptrap.log
 
 ### Option: StartSNMPTrapper
 #	If 1, SNMP trapper process is started.
@@ -292,7 +292,7 @@ SNMPTrapperFile=/var/log/snmptrap/snmptrap.log
 # Mandatory: no
 # Range: 0-1
 # Default:
-StartSNMPTrapper=1
+# StartSNMPTrapper=1
 
 ### Option: ListenIP
 #	List of comma delimited IP addresses that the trapper should listen on.
